<resources>
    <string name="app_name">Ting!</string>
    <string name="sign_up">Sign Up With Google</string>
    <string name="login">Continue With Google</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_next">Next</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string-array name="options">
        <item>♡ Personal</item>
        <item>☆ School</item>
        <item>🎂 Birthday</item>
        <item>📰 Others</item>
    </string-array>
    <string name="web_client_id">823225262950-jrchc0t8628plma2ap42goipqo5a1pe1.apps.googleusercontent.com</string>
    <string name="arrowUp">⬆</string>
    <string name="arrowDown">⬇</string>
    <string name="food_intake">FOOD INTAKE</string>
    <string name="food_intake_name">Food Intake Name</string>
    <string name="select">Select...</string>
    <string name="change_default_alarm_settings">Change Default Alarm Settings</string>
    <string name="todo">TODO</string>
    <string name="get_started">GET STARTED</string>
    <string name="receive_reminders_of_your_food_intake">Receive reminders of your food intake</string>
    <string name="meals_per_day">Meals Per Day</string>
    <string name="first_notification_reminder">First Notification Reminder</string>
    <string name="eating_intervals">Eating Intervals</string>
    <string name="display">display</string>


</resources>